@@ -18,8 +18,6 @@
 
 	    <h1>Airport and airline data</h1>
 	    
-	    <p>We believe that <a href="http://openflights.org">OpenFlights</a> is <b>the best free source of airport and airline data</b> on the Internet.  If you find something better, <i>complete with coordinates</i>, please <a href="/contact.html">let us know</a>!</p>
-
 	    <h2>Airport database</h2>
 
 	    <p><center><a href="/demo/openflights-apdb-2048.png"><img src="/demo/openflights-apdb.png" width="512" height="256"></a><br>(click to enlarge)</center></p>
@@ -95,7 +93,7 @@
 
 	    <table><tr><td>
 
-	    <p>Creating and maintaining this database has required and continues to require an <i>immense amount</i> of work, which is why it would cost you <i>over one thousand dollars</i> to buy it from a commercial supplier.  We need your support to keep this database up-to-date: just click on the PayPal link to the right (Visa, MasterCard, American Express and Discover also accepted).  We suggest <b>US$50</b>, but any amount at all is welcome, and you may use the data for free if you feel that you are unable to pay.  If you do donate, please specify in the comments if you would like a itemized receipt for business expense or tax purposes.</p>
+	    <p>Creating and maintaining this database has required and continues to require an <i>immense amount</i> of work, which is why it would cost you <i>over one thousand dollars</i> to buy it from a commercial supplier.  We need your support to keep this database up-to-date: just click on the PayPal link to the right (Visa, MasterCard, American Express and Discover also accepted).  We suggest <b>US$20</b>, but any amount at all is welcome, and you may use the data for free if you feel that you are unable to pay.  If you do donate, please specify in the comments if you would like a itemized receipt for business expense or tax purposes.</p>
 
 		  </td><td>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -113,6 +111,8 @@
 		  </td></tr></table>
 
 	    <p>The SourceForge copy is only a sporadically updated static snapshot of the live OpenFlights database (see <a href="http://openflights.svn.sourceforge.net/viewvc/openflights/openflights/data/airports.dat?view=log">revision log</a>).  If you would like an up-to-the-minute copy, or you would like your data filtered by any information available to us (eg. number of flights at the airport), do not hesitate to <a href="/about.html">contact us</a>.<p>
+
+	    <p>If you'd like an even more thorough database, with extensive coverage of airstrips, heliports and other places of less interest for commercial airline frequent flyers, do check out <a href="http://ourairports.com">OurAirports</a>, whose public domain database covers over 40,000 places to fly from.<p>
 
 	    <h2>Airline database</h2>
 
@@ -165,7 +165,7 @@
 
 	    <table><tr><td>
 
-	    <p>Creating and maintaining this database has required and continues to require an <i>immense amount</i> of work.  We need your support to keep this database up-to-date: just click on the PayPal link to the right (Visa, MasterCard, American Express and Discover also accepted).  We suggest <b>US$50</b>, but any amount at all is welcome, and you may use the data for free if you feel that you are unable to pay.  If you do donate, please specify in the comments if you would like a itemized receipt for business expense or tax purposes.</p>
+	    <p>Creating and maintaining this database has required and continues to require an <i>immense amount</i> of work.  We need your support to keep this database up-to-date: just click on the PayPal link to the right (Visa, MasterCard, American Express and Discover also accepted).  We suggest <b>US$20</b>, but any amount at all is welcome, and you may use the data for free if you feel that you are unable to pay.  If you do donate, please specify in the comments if you would like a itemized receipt for business expense or tax purposes.</p>
 
 		  </td><td>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -186,7 +186,7 @@
 
 	    <h2>Licensing and disclaimer</h2>
 
-	    <p>Like all of OpenFlights, the OpenFlights Airport and Airline databases are licensed under the <a href="http://www.fsf.org/licensing/licenses/agpl-3.0.html">GNU Affero General Public License</a>.  Airport data derived from the Global Airport Database may be subject to the <a href="http://www.opensource.org/licenses/cpl1.0.php">Common Public License</a>, while airline data derived from Wikipedia may be subject to the <a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>.  Whether these databases pass the <a href="http://en.wikipedia.org/wiki/Threshold_of_originality">threshold of originality</a> and are thus copyrightable in the United States is an open question, and Contentshare does not assert the validity or lack thereof of such a claim.</p>
+	    <p>Like all of OpenFlights, the OpenFlights Airport and Airline databases are licensed under the <a href="http://www.fsf.org/licensing/licenses/agpl-3.0.html">GNU Affero General Public License</a>.  Airport data derived <a href="http://ourairports.com">OurAirports</a> and DAFIF is in the public domain, while airline data derived from Wikipedia may be subject to the <a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>.  Whether these databases pass the <a href="http://en.wikipedia.org/wiki/Threshold_of_originality">threshold of originality</a> and are thus copyrightable in the United States is an open question, and Contentshare does not assert the validity or lack thereof of such a claim.</p>
 
 	    <p><b>This data is not suitable for navigation.</b>  OpenFlights does not assume any responsibility whatsoever for its accuracy, and consequently assumes no liability whatsoever for results obtained or loss or damage incurred as a result of application of the data.  OpenFlights expressly disclaims all warranties, expressed or implied, including but not limited to implied warranties of merchantability and fitness for any particular purpose.</p>
 
@@ -194,7 +194,7 @@
 
 	    <h2>Sources</h2>
 
-	    <p>Airport base data was generated by mashing together DAFIF (October 2006 cycle) for location, ICAO data and country data with the Global Airport Database for IATA codes and city names, plus timezone information from <a href="http://www.earthtools.org">EarthTools</a>.  All DST information added manually.  Significant revisions and additions made by the users of OpenFlights.</p>
+	    <p>Airport base data was generated by from DAFIF (October 2006 cycle) and <a href="http://ourairports.com">OurAirports</a>, plus timezone information from <a href="http://www.earthtools.org">EarthTools</a>.  All DST information added manually.  Significant revisions and additions made by the users of OpenFlights.</p>
 
 	    <p>Airline data was extracted directly from Wikipedia's gargantuan <a href="http://en.wikipedia.org/en/List_of_airlines">List of airlines</a>.  Significant revisions and additions made by the users of OpenFlights.</p>
 
